# coding-assistant

./: LICENSE  README.md  docker-compose.yml
coding-assistant-BE/: .env.docker.example  .env.local.example  Dockerfile  Makefile  README.md  pyproject.toml
coding-assistant-BE/coding_assistant/: main.py
coding-assistant-BE/coding_assistant/assistant/: constants.py  models.py  module.py  repository.py  schemas.py  service.py
coding-assistant-BE/coding_assistant/connections/: __init__.py
coding-assistant-BE/coding_assistant/connections/azureopenaix/: __init__.py
coding-assistant-BE/coding_assistant/llms/: __init__.py  azureopenaillm.py  constants.py  llm.py  module.py
coding-assistant-BE/coding_assistant/routes/: assistant.py
coding-assistant-BE/postgres/: init.sql
coding-assistant-FE/: Dockerfile  README.md  package.json
coding-assistant-FE/src/: App.tsx  ErrorBoundary.tsx  Root.tsx
coding-assistant-FE/src/api/assistant/: module.ts  types.ts
coding-assistant-FE/src/assistant/components/: InputPanel.tsx  MainPage.tsx  Markdown.tsx  MessageDisplayPanel.tsx  MessageRenderer.tsx  ThreadGroup.tsx  ThreadItem.tsx  ThreadsPanel.tsx
coding-assistant-FE/src/assistant/helpers/: datetimehelper.ts
coding-assistant-FE/src/shared/components/: AppToaster.tsx  DeleteConfirmationPopup.tsx
coding-assistant-FE/src/shared/hooks/: useOnClickOutside.ts
