[tool.poetry]
name = "coding-assistant"
version = "0.1.0"
description = "GPT based coding assistant"
authors = ["Gaukhar <gaukhar112200@example.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
environs = "^11.0.0"
injector = "^0.21.0"
sqlalchemy = "^2.0.29"
pydantic = "^2.6.4"
fastapi-injector = "^0.5.4"
openai = "^1.14.3"
uvicorn = "^0.29.0"
pytest = "^8.1.1"
psycopg2-binary = "^2.9.9"
ipython = "^8.23.0"
shap = "^0.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
